syntax = "proto3";

option csharp_namespace = "CalculatorClient";

package calculator;

service Calculator {
  rpc Calculate(CalculateRequest)
      returns (CalculateResponse);
}

message CalculateRequest {
  double first_operand = 1;
  double second_operand = 2;
  Operation operation = 3;
}

message CalculateResponse {
  double result = 1;
}

enum Operation{
  PLUS = 0;
  MINUS = 1;
  MULTIPLY = 2;
  DIVIDE = 3;
}